--- a/Policheck/Views/MainWindow.xaml
+++ b/Policheck/Views/MainWindow.xaml
@@ -29,7 +29,7 @@
                 <!-- Derecha (DataGrid) -->
             </Grid.ColumnDefinitions>
 
-            <Viewbox x:Name="Vbx_InicioSesion" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Grid.RowSpan="4" Visibility="Visible">
+            <Viewbox x:Name="Vbx_InicioSesion" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Grid.RowSpan="4" Visibility="Visible" d:IsHidden="True">
                 <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
                     <!-- Logo -->
                     <Image Source="/Imagenes/LogoPolicheck.png" Height="150" MaxWidth="500" Stretch="Uniform"/>
@@ -68,12 +68,12 @@
                     <!-- Espaciado externo -->
                     <Setter Property="FontWeight" Value="Bold"/>
                     <Setter Property="Cursor" Value="Hand"/>
-                    <Setter Property="Foreground" Value="Black"/>
+                    <Setter Property="Foreground" Value="White" />
 
                     <!-- Efecto Hover -->
                     <Style.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Foreground" Value="LightGray"/>
+                            <Setter Property="Foreground" Value="Black"/>
                             <!-- Color al pasar el mouse -->
                             <Setter Property="FontSize" Value="27"/>
                             <!-- Aumenta tamaño en hover -->
@@ -82,26 +82,26 @@
                 </Style>
             </Menu.Resources>
 
-            <MenuItem Header="Funcionario" FontSize="15" Background="#AAD4D1D1">
-                <MenuItem Header="Mis Datos" Click="BtnPerfil" Icon="👮‍" ></MenuItem>
-                <Separator></Separator>
-                <MenuItem Header="Alta Funcionario" ></MenuItem>
-                <MenuItem Header="Modificar Funcionario"></MenuItem>
-                <MenuItem Header="Deshabilitar Funcionario"></MenuItem>
+            <MenuItem Header="Funcionario" FontSize="15">
+                <MenuItem Header="Mis Datos" Click="BtnPerfil" Icon="👮‍"   Background="Black"></MenuItem>
+                <Separator  Background="Black" FontSize="10"></Separator>
+                <MenuItem Header="Alta Funcionario"  Click="BtnAltaFuncionario" Background="Black"></MenuItem>
+                <MenuItem Header="Modificar Funcionario"  Background="Black"></MenuItem>
+                <MenuItem Header="Deshabilitar Funcionario"  Background="Black"></MenuItem>
             </MenuItem>
-            <MenuItem Header="Ciudadano" FontSize="15" Background="#AAD4D1D1">
-                <MenuItem Header="Alta ciudadano"></MenuItem>
-                <MenuItem Header="Modificar ciudadano"></MenuItem>
-                <MenuItem Header="Eliminar ciudadano"></MenuItem>
+            <MenuItem Header="Ciudadano" FontSize="15" >
+                <MenuItem Header="Alta ciudadano"  Background="Black" ></MenuItem>
+                <MenuItem Header="Modificar ciudadano"  Background="Black"></MenuItem>
+                <MenuItem Header="Eliminar ciudadano"  Background="Black"></MenuItem>
             </MenuItem>
-            <MenuItem Header="Denuncia" FontSize="15 " Background="#AAD4D1D1">
-                <MenuItem Header="Nueva denuncia"></MenuItem>
-                <MenuItem Header="Modificar Denuncia"></MenuItem>
-                <MenuItem Header="Eliminar Denuncia"></MenuItem>
+            <MenuItem Header="Denuncia" FontSize="15" >
+                <MenuItem Header="Nueva denuncia"  Background="Black"></MenuItem>
+                <MenuItem Header="Modificar Denuncia"  Background="Black"></MenuItem>
+                <MenuItem Header="Eliminar Denuncia"  Background="Black"></MenuItem>
             </MenuItem>
-            <MenuItem Header="Ver" FontSize="15" Background="#AAD4D1D1">
-                <MenuItem Header="Ver Ciudadanos"></MenuItem>
-                <MenuItem Header="Ver Denuncias"></MenuItem>
+            <MenuItem Header="Ver" FontSize="15">
+                <MenuItem Header="Ver Ciudadanos"  Background="Black"></MenuItem>
+                <MenuItem Header="Ver Denuncias"  Background="Black"></MenuItem>
 
             </MenuItem>
         </Menu>
@@ -158,9 +158,70 @@
             </Border>
            </Viewbox>
 
+        <Viewbox Name="Vbx_Funcionario" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" MaxHeight="700" Visibility="Hidden">
+
+            <Border Background="#AA1E1E1E" CornerRadius="15" Padding="15"
+     BorderBrush="White" BorderThickness="1" Width="250" >
+                <StackPanel Width="220">
+                    <Label Content="Nº Placa" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtNumeroPlaca" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="DNI" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtDNI" Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Nombre" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtNombreFunc" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Género" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtGenero" Margin="5" Width="180" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Edad Actual" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtEdadActual" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Correo" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtCorreo" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Teléfono" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtTelefono" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Fecha Nacimiento" Foreground="White"  HorizontalAlignment="Center"/>
+                    <DatePicker Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"></DatePicker>
+                    <Label Content="Turno" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtTurno" Margin="5" Width="180"  Foreground="Black" BorderBrush= "#BDBDBD" BorderThickness="1"/>
+                    <ComboBox Name="cmbx_Turno" Width="180" IsReadOnly="True" Visibility="Visible"  >
+                        <ComboBoxItem Content="Mañana" />
+                        <ComboBoxItem Content="Tarde" />
+                        <ComboBoxItem Content="Noche" />
+                    </ComboBox>
+
+                    <Label Content="Rango" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtRango" Margin="5" Width="180" IsReadOnly="True"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <ComboBox Name="cmbx_Rango" Width="180" Visibility="Visible" IsReadOnly="True" SelectionChanged="SeleccionRango" />
+
+                    <Label Content="Distrito" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtDistrito" Margin="5" Width="180" IsReadOnly="True" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <ComboBox Name="cmbx_Distrito" Width="180" Visibility="Visible" IsReadOnly="True" SelectionChanged ="SeleccionDistrito"></ComboBox>
+                </StackPanel>
+            </Border>
+        </Viewbox>
+
+        <Viewbox Name="Vbx_Acciones" HorizontalAlignment="Center"  Grid.Row="1" Grid.Column="2"  MaxHeight="150" Visibility="Hidden" >
+
+            <Border Background="#AA1E1E1E" CornerRadius="15" Padding="15" Margin="10"
+                 BorderBrush="White"  BorderThickness="1">
+                <StackPanel Width="160" Name="Stkpnl_Acciones" Background="#1E1E1E" >
+                    <Button Content="🛡️ Generar NPlaca" Height="50" Margin="5" Background="#007ACC"  Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1"  Click="GeneradorDePlacas"/>
+                    <Button Content="👮 Añadir" Height="50" Margin="5" Background="#007ACC"  Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" />
+                    <Button Content="⏪ Volver" Height="50" Margin="5" Background="#007ACC"  Foreground="White" FontWeight="Bold" FontSize="16" Cursor="Hand" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                </StackPanel>
+            </Border>
+        </Viewbox>
 
 
 
-        </Grid>
+
+
+
+    </Grid>
    
 </Window>
