--- a/Policheck/Views/MainWindow.xaml
+++ b/Policheck/Views/MainWindow.xaml
@@ -7,53 +7,53 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" Background="White" WindowState="Maximized" ShowInTaskbar="False">
 
-   
 
-        <Grid x:Name="MainGrid" >
-            <!-- Definir Columnas y Filas -->
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <!-- Menú -->
-                <RowDefinition/>
-                <RowDefinition Height="Auto"></RowDefinition >
-                <RowDefinition Height="Auto"></RowDefinition>
 
-                <!-- Contenido principal -->
-            </Grid.RowDefinitions>
+    <Grid x:Name="MainGrid" >
+        <!-- Definir Columnas y Filas -->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <!-- Menú -->
+            <RowDefinition/>
+            <RowDefinition Height="Auto"></RowDefinition >
+            <RowDefinition Height="Auto"></RowDefinition>
 
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition  />
-                <!-- Izquierda (TextBox) -->
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <!-- Derecha (DataGrid) -->
-            </Grid.ColumnDefinitions>
+            <!-- Contenido principal -->
+        </Grid.RowDefinitions>
 
-            <Viewbox x:Name="Vbx_InicioSesion" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Grid.RowSpan="4" Visibility="Visible" d:IsHidden="True">
-                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <!-- Logo -->
-                    <Image Source="/Imagenes/LogoPolicheck.png" Height="150" MaxWidth="500" Stretch="Uniform"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition  />
+            <!-- Izquierda (TextBox) -->
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <!-- Derecha (DataGrid) -->
+        </Grid.ColumnDefinitions>
 
-                    <!-- Panel de Fondo con Efecto Glassmorphism -->
-                    <Border Background="#AA1E1E1E" CornerRadius="15" Padding="25" Margin="10"
+        <Viewbox x:Name="Vbx_InicioSesion" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Grid.RowSpan="4" Visibility="Visible" d:IsHidden="True">
+            <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+                <!-- Logo -->
+                <Image Source="/Imagenes/LogoPolicheck.png" Height="150" MaxWidth="500" Stretch="Uniform"/>
+
+                <!-- Panel de Fondo con Efecto Glassmorphism -->
+                <Border Background="#AA1E1E1E" CornerRadius="15" Padding="25" Margin="10"
                         BorderBrush="White" BorderThickness="1" >
 
-                        <StackPanel HorizontalAlignment="Center">
-                            <Label Content="Numero Placa" FontSize="16" FontWeight="Bold" Foreground="White" Margin="5" HorizontalAlignment="Center"/>
-                            <TextBox x:Name="txtPlaca" MinHeight="30" Width="220" Background="#CC333333"
+                    <StackPanel HorizontalAlignment="Center">
+                        <Label Content="Numero Placa" FontSize="16" FontWeight="Bold" Foreground="White" Margin="5" HorizontalAlignment="Center"/>
+                        <TextBox x:Name="txtPlaca" MinHeight="30" Width="220" Background="#CC333333"
                             Foreground="White" BorderBrush="White" FontSize="14" Margin="5"/>
 
-                            <Label Content="Contraseña" FontSize="16" FontWeight="Bold" Foreground="White" Margin="5" HorizontalAlignment="Center"/>
-                            <PasswordBox x:Name="pwdContraseña" MinHeight="30" Width="220" Background="#CC333333"
+                        <Label Content="Contraseña" FontSize="16" FontWeight="Bold" Foreground="White" Margin="5" HorizontalAlignment="Center"/>
+                        <PasswordBox x:Name="pwdContraseña" MinHeight="30" Width="220" Background="#CC333333"
                       Foreground="White" BorderBrush="White" FontSize="14" Margin="5"/>
 
-                            <Button Content="Iniciar Sesión" Margin="15" MinHeight="40" Width="220"
+                        <Button Content="Iniciar Sesión" Margin="15" MinHeight="40" Width="220"
                  Background="#007ACC" Foreground="White" FontWeight="Bold" FontSize="16"
                  BorderThickness="0" Cursor="Hand" Click="BtnEntrar"/>
-                        </StackPanel>
-                    </Border>
-                </StackPanel>
-            </Viewbox>
+                    </StackPanel>
+                </Border>
+            </StackPanel>
+        </Viewbox>
 
 
 
@@ -83,7 +83,7 @@
             </Menu.Resources>
 
             <MenuItem Header="Funcionario" FontSize="15">
-                <MenuItem Header="Mis Datos" Click="BtnPerfil" Icon="👮‍"   Background="Black"></MenuItem>
+                <MenuItem Header="Mis Datos" Click="BtnPerfil"   Background="Black"></MenuItem>
                 <Separator  Background="Black" FontSize="10"></Separator>
                 <MenuItem Header="Alta Funcionario"  Click="BtnAltaFuncionario" Background="Black"></MenuItem>
                 <MenuItem Header="Modificar Funcionario"  Background="Black"></MenuItem>
@@ -109,7 +109,7 @@
 
 
         <Viewbox x:Name="Vbx_Perfil" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="4" Visibility="Hidden">
-                <Border  Background="#AA1E1E1E" BorderThickness="2" BorderBrush="White" Grid.Row="1" Grid.ColumnSpan="3" CornerRadius="5" Padding="10" Margin="133,26,118,26"  >
+            <Border  Background="#AA1E1E1E" BorderThickness="2" BorderBrush="White" Grid.Row="1" Grid.ColumnSpan="3" CornerRadius="5" Padding="10" Margin="133,26,118,26"  >
                 <StackPanel>
                     <Label Content="Datos de Perfil"  FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" Foreground="White"  />
                     <Grid Height="269">
@@ -135,28 +135,29 @@
                         </Grid.ColumnDefinitions>
 
                         <!-- Controles de perfil (sin etiquetas) -->
-                            <TextBox Name="txtbx_Nombre" Margin="5" Grid.Row="1" Grid.ColumnSpan="1" Grid.Column="0" Text="" Width="170" IsReadOnly="True" Visibility="Visible"   />
-                            <TextBox Name="txtbx_Dni" Margin="5" Grid.Row="2" Grid.Column="0" Text="" Width="170" IsReadOnly="True" Visibility="Visible" />
-                            <TextBox Name="txtbx_FechNac" Margin="5" Grid.Row="3" Grid.Column="0" Text="" Width="170" IsReadOnly="True" Visibility="Visible" />
-                            <PasswordBox Name="pswd_contra" Margin="5" Grid.Row="4" Grid.Column="0" Width="170" Visibility="Visible" IsEnabled="False" />
-                            <TextBox Name="txtbx_Rango" Margin="5" Grid.Row="7" Grid.Column="0" Text="" Width="170" IsReadOnly="True" Visibility="Visible"  />
-                            <TextBox Name="txtbx_Telefono" Margin="5" Grid.Row="5" Grid.Column="0" Text="" Width="170" IsReadOnly="True" Visibility="Visible" />
-                            <TextBox Name="txtbx_Genero" Margin="5" Grid.Row="6" Grid.Column="1" Text="" Width="170" IsReadOnly="True" Visibility="Visible"  />
-                            <TextBox Name="txtbx_Correo" Margin="5" Grid.Row="6" Grid.Column="0" Text="" Width="170" IsReadOnly="True" Visibility="Visible"  />
-                            <TextBox Name="txtbx_Turno"  Margin="5" Grid.Row="8" Grid.Column="1" Text="" Width="170" IsReadOnly="True" Visibility="Visible"  />
-                            <TextBox Name="txtbx_Distrito" Margin="5" Grid.Row="8" Grid.Column="0" Text="" Width="170" IsReadOnly="True" Visibility="Visible"  />
-                            <TextBox Name="txtbx_NPlaca"  Margin="5" Grid.Row="7" Grid.Column="1" Text="" Width="170" IsReadOnly="True" Visibility="Visible" />
+                        <TextBox Name="txtbx_Nombre" Margin="5" Grid.Row="1" Grid.ColumnSpan="1" Grid.Column="0" Text="" Width="170" IsReadOnly="True" Visibility="Visible"   />
+                        <TextBox Name="txtbx_Dni" Margin="5" Grid.Row="2" Grid.Column="0" Text="" Width="170" IsReadOnly="True" Visibility="Visible" />
+                        <TextBox Name="txtbx_FechNac" Margin="5" Grid.Row="3" Grid.Column="0" Text="" Width="170" IsReadOnly="True" Visibility="Visible" />
+                        <PasswordBox Name="pswd_contra" Margin="5" Grid.Row="4" Grid.Column="0" Width="170" Visibility="Visible" IsEnabled="False" />
+                        <TextBox Name="txtbx_Rango" Margin="5" Grid.Row="7" Grid.Column="0" Text="" Width="170" IsReadOnly="True" Visibility="Visible"  />
+                        <TextBox Name="txtbx_Telefono" Margin="5" Grid.Row="5" Grid.Column="0" Text="" Width="170" IsReadOnly="True" Visibility="Visible" />
+                        <TextBox Name="txtbx_Genero" Margin="5" Grid.Row="6" Grid.Column="1" Text="" Width="170" IsReadOnly="True" Visibility="Visible"  />
+                        <TextBox Name="txtbx_Correo" Margin="5" Grid.Row="6" Grid.Column="0" Text="" Width="170" IsReadOnly="True" Visibility="Visible"  />
+                        <TextBox Name="txtbx_Turno"  Margin="5" Grid.Row="8" Grid.Column="1" Text="" Width="170" IsReadOnly="True" Visibility="Visible"  />
+                        <TextBox Name="txtbx_Distrito" Margin="5" Grid.Row="8" Grid.Column="0" Text="" Width="170" IsReadOnly="True" Visibility="Visible"  />
+                        <TextBox Name="txtbx_NPlaca"  Margin="5" Grid.Row="7" Grid.Column="1" Text="" Width="170" IsReadOnly="True" Visibility="Visible" />
 
                         <!-- Imagen de perfil -->
                         <Image Name="img_Perfil" Grid.Row="1" Grid.RowSpan="3" Grid.Column="4" Height="131" VerticalAlignment="Center" Source="/Views/fotoperfil.png" Visibility="Visible" />
 
                         <!-- Botón Ver Méritos -->
                         <Button Name="btn_Meritos" Grid.Row="4" Grid.Column="1" Content="VER" Width="72" Background="White" Visibility="Visible" Click="Btn_Meritos" Margin="92,15,92,15" Grid.RowSpan="2" />
+                        <Button Name="btn_Volver" Grid.Column="1" Content="Vovler" Width="72" HorizontalAlignment="Right" Background="White" Visibility="Visible" Click="Btn_Volver"  />
                     </Grid>
                 </StackPanel>
-          
+
             </Border>
-           </Viewbox>
+        </Viewbox>
 
         <Viewbox Name="Vbx_Funcionario" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" MaxHeight="700" Visibility="Hidden">
 
@@ -171,6 +172,12 @@
 
                     <Label Content="Nombre" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox Name="txtNombreFunc" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="1ºApellido" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtPrimerApell" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    
+                    <Label Content="2ºApellido" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Name="txtSegunApell" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
                     <Label Content="Género" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox Name="txtGenero" Margin="5" Width="180" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
@@ -223,5 +230,5 @@
 
 
     </Grid>
-   
+
 </Window>
