--- a/Policheck/Views/MainWindow.xaml
+++ b/Policheck/Views/MainWindow.xaml
@@ -159,13 +159,13 @@
             </Border>
         </Viewbox>
 
-        <Viewbox Name="Vbx_Funcionario" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" MaxHeight="700" Visibility="Hidden">
+        <Viewbox Name="Vbx_Funcionario" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" MaxHeight="700">
 
             <Border Background="#AA1E1E1E" CornerRadius="15" Padding="15"
      BorderBrush="White" BorderThickness="1" Width="250" >
                 <StackPanel Width="220">
                     <Label Content="Nº Placa" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox Name="txtNumeroPlaca" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <TextBox Name="txtNumeroPlaca" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" IsReadOnly="True"/>
 
                     <Label Content="DNI" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox Name="txtDNI" Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
@@ -183,7 +183,10 @@
                     <TextBox Name="txtSegunApell" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
                     <Label Content="Género" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox Name="txtGenero" Margin="5" Width="180" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <ComboBox Name="cmbxGenero" Margin="5" Width="180" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" IsEditable="False">
+                        <ComboBoxItem Content="M" />
+                        <ComboBoxItem Content="F" />
+                    </ComboBox>
 
                     <Label Content="Correo" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox Name="txtCorreo" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
@@ -194,7 +197,7 @@
                     <Label Content="Fecha Nacimiento" Foreground="White"  HorizontalAlignment="Center"/>
                     <DatePicker Name="datpick_FechaNacimiento" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"></DatePicker>
                     <Label Content="Turno" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox Name="txtTurno" Margin="5" Width="180"  Foreground="Black" BorderBrush= "#BDBDBD" BorderThickness="1"/>
+                    <TextBox Name="txtTurno" Margin="5" Width="180"  Foreground="Black" BorderBrush= "#BDBDBD" BorderThickness="1" IsReadOnly="True"/>
                     <ComboBox Name="cmbx_Turno" Width="180" IsReadOnly="True" Visibility="Visible" SelectionChanged="SeleccionTurno" >
                         <ComboBoxItem Content="Mañana" />
                         <ComboBoxItem Content="Tarde" />
