--- a/Policheck/Views/MainWindow.xaml
+++ b/Policheck/Views/MainWindow.xaml
@@ -58,7 +58,7 @@
 
 
         <Menu Name="mnu_Inicial"  Grid.Row="0" Grid.ColumnSpan="2" 
-        FontSize="25" Foreground="White" Background="{x:Null}" Visibility="Hidden">
+        FontSize="25" Foreground="White" Background="{x:Null}" Visibility="Collapsed">
             <Menu.Resources>
                 <!-- Estilo para los elementos del menú -->
                 <Style TargetType="MenuItem">
@@ -84,24 +84,21 @@
 
             <MenuItem Header="Funcionario" FontSize="15">
                 <MenuItem Header="Mis Datos" Click="BtnPerfil"   Background="Black"></MenuItem>
-                <Separator  Background="Black" FontSize="10"></Separator>
-                <MenuItem Header="Alta Funcionario"  Click="BtnAltaFuncionario" Background="Black"></MenuItem>
-                <MenuItem Header="Modificar Funcionario"  Background="Black"></MenuItem>
-                <MenuItem Header="Deshabilitar Funcionario"  Background="Black"></MenuItem>
+                <MenuItem Header="Crear Incidencia" Background="Black"></MenuItem>
+                <Separator Name="SeparatorFunc" Background="Black" FontSize="10"></Separator>
+                <MenuItem Name="MnuItm_AltaFunc" Header="Alta Funcionario"  Click="BtnAltaFuncionario" Background="Black"></MenuItem>
+            
             </MenuItem>
             <MenuItem Header="Ciudadano" FontSize="15" >
                 <MenuItem Header="Alta ciudadano"  Background="Black" ></MenuItem>
-                <MenuItem Header="Modificar ciudadano"  Background="Black"></MenuItem>
-                <MenuItem Header="Eliminar ciudadano"  Background="Black"></MenuItem>
             </MenuItem>
             <MenuItem Header="Denuncia" FontSize="15" >
                 <MenuItem Header="Nueva denuncia"  Background="Black"></MenuItem>
-                <MenuItem Header="Modificar Denuncia"  Background="Black"></MenuItem>
-                <MenuItem Header="Eliminar Denuncia"  Background="Black"></MenuItem>
             </MenuItem>
             <MenuItem Header="Ver" FontSize="15">
                 <MenuItem Header="Ver Ciudadanos"  Background="Black"></MenuItem>
                 <MenuItem Header="Ver Denuncias"  Background="Black"></MenuItem>
+                <MenuItem Header="Ver Funcionarios"  Background="Black"></MenuItem>
 
             </MenuItem>
         </Menu>
@@ -161,11 +158,10 @@
 
         <Viewbox Name="Vbx_Funcionario" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" MaxHeight="700" Visibility="Hidden">
 
-            <Border Background="#AA1E1E1E" CornerRadius="15" Padding="15"
-     BorderBrush="White" BorderThickness="1" Width="250" >
+            <Border Background="#AA1E1E1E" CornerRadius="15" Padding="15" BorderBrush="White" BorderThickness="1" Width="250" >
                 <StackPanel Width="220">
                     <Label Content="Nº Placa" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox Name="txtNumeroPlaca" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <TextBox Name="txtNumeroPlaca" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" IsReadOnly="True"/>
 
                     <Label Content="DNI" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox Name="txtDNI" Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
