--- a/Policheck/Views/MainWindow.xaml
+++ b/Policheck/Views/MainWindow.xaml
@@ -29,7 +29,7 @@
             <!-- Derecha (DataGrid) -->
         </Grid.ColumnDefinitions>
 
-        <Viewbox x:Name="Vbx_InicioSesion" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Grid.RowSpan="4" Visibility="Visible" d:IsHidden="True">
+        <Viewbox x:Name="Vbx_InicioSesion" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Grid.RowSpan="4" Visibility="Visible">
             <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
                 <!-- Logo -->
                 <Image Source="/Imagenes/LogoPolicheck.png" Height="150" MaxWidth="500" Stretch="Uniform"/>
@@ -87,7 +87,7 @@
                 <MenuItem Header="Crear Incidencia" Background="Black" Click="BtnCrearInciencia"></MenuItem>
                 <Separator Name="SeparatorFunc" Background="Black" FontSize="10"></Separator>
                 <MenuItem Name="MnuItm_AltaFunc" Header="Alta Funcionario"  Click="BtnAltaFuncionario" Background="Black"></MenuItem>
-            
+
             </MenuItem>
             <MenuItem Header="Ciudadano" FontSize="15" >
                 <MenuItem Header="Alta ciudadano"  Background="Black" Click="BtnAltaCiudadano" ></MenuItem>
@@ -95,13 +95,17 @@
             <MenuItem Header="Denuncia" FontSize="15" >
                 <MenuItem Header="Nueva denuncia"  Background="Black" Click="BtnDenuncia"></MenuItem>
             </MenuItem>
-            <MenuItem Header="Ver" FontSize="15">
-                <MenuItem Header="Ver Ciudadanos"  Background="Black"></MenuItem>
-                <MenuItem Header="Ver Denuncias"  Background="Black"></MenuItem>
-                <MenuItem Header="Ver Funcionarios"  Background="Black"></MenuItem>
 
+            <MenuItem Header="Ver" FontSize="15">
+                <MenuItem Header="Ver Ciudadanos" Background="Black"></MenuItem>
+                <MenuItem Header="Ver Denuncias" Background="Black"></MenuItem>
+                <MenuItem Header="Ver Funcionarios" Background="Black"></MenuItem>
             </MenuItem>
-            <MenuItem Header="Cerrar Sesión" FontSize="15" Click="BtnCerrarSesion" Background="Black"></MenuItem>
+
+            <!-- Cerrar Sesión debe estar FUERA del "Ver" -->
+            <MenuItem Header="Opciones" FontSize="15">
+                <MenuItem Header="Cerrar Sesión" FontSize="15" Click="Btn_CerrarSesion" Background="Black"/>
+            </MenuItem>
 
         </Menu>
 
@@ -176,7 +180,7 @@
 
                     <Label Content="1ºApellido" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox Name="txtPrimerApell" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-                    
+
                     <Label Content="2ºApellido" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox Name="txtSegunApell" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
@@ -230,7 +234,7 @@
 
             <Border Background="#AA1E1E1E" CornerRadius="15" Padding="15" BorderBrush="White" BorderThickness="1" Width="250" >
                 <StackPanel Width="220">
-                    
+
                     <Label Content="Numero Placa" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox Name="txtNumeroPlacaInc" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" IsReadOnly="True"/>
 
@@ -272,7 +276,7 @@
 
                     <Label Content="Nombre" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox Name="txtNombreCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-                    
+
                     <Label Content="1ºApellido" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox Name="txtPrimerApellCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
@@ -293,7 +297,7 @@
 
                     <Label Content="Fecha Nacimiento" Foreground="White"  HorizontalAlignment="Center"/>
                     <DatePicker Name="datpick_FechaNacimientoCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"></DatePicker>
-                 
+
                     <Label Content="Direccion" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox Name="txtDireccionCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
@@ -320,13 +324,13 @@
                 <StackPanel Width="220">
                     <Label Content="Dni" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox Name="txtDniDenuncia" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" />
-                    
+
                     <Label Content="Titulo" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox Name="txtTituloDen"  Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-                    
+
                     <Label Content="Descripcion" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox Name="txtDescripcionDen"  Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" Height="66"/>
-                    
+
                     <Label Content="Direccion" Foreground="White"  HorizontalAlignment="Center"/>
                     <TextBox Name="txtDireccionDen"  Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" />
 
