--- a/Policheck/Views/MainWindow.xaml
+++ b/Policheck/Views/MainWindow.xaml
@@ -420,9 +420,9 @@
             <Border Background="#AA1E1E1E" CornerRadius="15" Padding="15" Margin="10"
             BorderBrush="White"  BorderThickness="1">
                 <StackPanel Width="160"  Background="#1E1E1E" >
-                    <TextBox Name="txtbx_BuscarDato" Height="30"  Padding="5" Background="White" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" />
+                    <TextBox Name="txtbx_NumPlaca" Height="30"  Padding="5" Background="White" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" />
                     <Separator Opacity="0"></Separator>
-                    <Button Content="🔍 Buscar" Height="50" Margin="5" Background="#1976D2" Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" />
+                    <Button Content="🔍 Buscar" Height="50" Margin="5" Background="#1976D2" Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" Click="FiltrarPorPlaca" />
                     <Button Content="🔄 Restaurar" Height="50" Margin="5" Background="#1976D2" Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" />
                     <Button Content="✏️ Modificar" Height="50" Margin="5" Background="#007ACC"  Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" />
                     <Button Name="btn_MasDetalles" Content="ℹ️ Mas Detalles" Height="50" Margin="5" Background="#007ACC"  Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" />
